# AI_task_manager

./: .gitignore  README.md  how_to_run.txt  main.py  my_tasks.db  pyproject.toml  requirements.txt
